<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/access_2_success" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/logo" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgPhoto"
                    android:layout_width="90dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Name : " />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            tools:text="@string/app_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/health_card_number2" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvCardNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/health_card_number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location2" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/location" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_birth2" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvBod"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/date_of_birth" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender2" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/gender" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile_number2" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/mobile_number" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lnrValid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Valid till :" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvValidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="valid till" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>