<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/top_bg_color"
        android:fillViewport="true"
        tools:context=".activities.ActAgentProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:src="@drawable/logo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_text_box"
                android:hint="@string/name"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_text_box"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/imgCall"
                    android:background="@null"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <ImageView
                    android:id="@+id/imgCall"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_call" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_text_box"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/imgMail"
                    android:background="@null"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <ImageView
                    android:id="@+id/imgMail"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_mail"
                    app:tint="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_text_box"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtAadhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/imgAadhar"
                    android:background="@null"
                    android:hint="@string/aadhar"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="12"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <ImageView
                    android:id="@+id/imgAadhar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_cloud_upload"
                    app:tint="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_text_box"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPanCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/imgPanCard"
                    android:background="@null"
                    android:hint="@string/pan_card"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="12"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <ImageView
                    android:id="@+id/imgPanCard"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_cloud_upload"
                    app:tint="@color/white" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBack"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_btn"
                android:text="@string/back"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>