<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        android:orientation="vertical"
        tools:context=".activities.ActAgentLogin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/branch_box_margin_s"
                android:layout_marginTop="@dimen/branch_box_margin_t"
                android:layout_marginEnd="@dimen/branch_box_margin_e"
                android:layout_marginBottom="@dimen/branch_box_margin_b"
                android:background="@drawable/bg_text_box"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtUserNAme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@null"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/branch_box_margin_s"
                android:layout_marginTop="@dimen/branch_box_margin_s"
                android:layout_marginEnd="@dimen/branch_box_margin_s"
                android:layout_marginBottom="@dimen/branch_box_margin_s"
                android:background="@drawable/bg_text_box"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toStartOf="@+id/imgPass"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgPass"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/branch_box_margin_s"
                android:layout_marginTop="@dimen/branch_box_margin_s"
                android:layout_marginEnd="@dimen/branch_box_margin_s"
                android:layout_marginBottom="@dimen/branch_box_margin_s"
                android:background="@drawable/bg_btn"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>
</layout>