<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Main Card" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_box_gray"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_box_gray"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtAadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/aadhar"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

            <!--     <ImageView
                     android:id="@+id/imgAadhar"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="5dp"
                     android:src="@drawable/ic_cloud_upload"
                     app:tint="@color/gray" />-->
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyAdharPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_box_gray"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAdharPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/imgAdharPhoto"
                android:background="@null"
                android:hint="AdharCard Photo"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgAdharPhoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_cloud_upload"
                app:tint="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_box_gray"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/imgPhoto"
                android:background="@null"
                android:hint="Photo"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_cloud_upload"
                app:tint="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_box_gray"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/contact_number"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

            <!--  <ImageView
                  android:id="@+id/imgCall"
                  android:layout_width="24dp"
                  android:layout_height="24dp"
                  android:layout_alignParentEnd="true"
                  android:layout_marginEnd="5dp"
                  android:src="@drawable/ic_call"
                  app:tint="@color/gray" />-->
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_box_gray"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/location"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="18sp" />

            <!--  <ImageView
                  android:id="@+id/imgCall"
                  android:layout_width="24dp"
                  android:layout_height="24dp"
                  android:layout_alignParentEnd="true"
                  android:layout_marginEnd="5dp"
                  android:src="@drawable/ic_call"
                  app:tint="@color/gray" />-->
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="@color/black" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:outlineProvider="bounds">


            <RadioButton
                android:id="@+id/rbGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:drawableEnd="@drawable/ic_male"
                android:elevation="3dp"
                android:gravity="center"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbGenderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:drawableEnd="@drawable/ic_female"
                android:elevation="3dp"
                android:gravity="center"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RadioGroup>

        <EditText
            android:id="@+id/btnDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_pick_date" />

    </LinearLayout>
</layout>